# Algorithms

./: CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.hpp
executables/: CMakeLists.txt  binary_search.cpp  factorial.cpp  selection_sort.cpp
